==> ff2002ABCD/myproject/ziliao/模块资料/CH376/CH375_CH376_U盘模块/测试程序/AVR_GCC_CH375测试程序/EXAM6/CH375HFT.c <==
#include <string.h>
#include <stdio.h>
#define	 F_CPU	7372800		/* 单片机主频为16MHz,用于延时子程序 */
#include <util/delay.h>
#include <avr/io.h>
#include<avr/eeprom.h>
#include<avr/pgmspace.h>
#define FOSC   F_CPU
#define F_CPU  7372800
#define BAUD   9600
#define MYUBRR FOSC/BAUD/16-1

void CH375_PORT_INIT( )  /* 由于使用通用I/O模块并口读写时序,所以进行初始化 */
{
	DDRD = 0x00;  /* 设置8位并口为输入 */
	//PORTB = 0x07;  /* 设置CS,WR,RD默认为高电平 */
	PORTG |= (0x01 << CH375_CS);
	PORTG |= (0x01 << CH375_WR);
	PORTG |= (0x01 << CH375_RD); 
	DDRG = 0x1e;  
//	DDRB = 0x0F;  /* 设置CS,WR,RD,A0为输出,设置INT#为输入 */
}

void xWriteCH375Cmd( UINT8 mCmd )		/* 外部定义的被CH375程序库调用的子程序,向CH375写命令 */
{
	mDelay1uS( ); mDelay1uS( );  /* 至少延时1uS */
/*	*(volatile unsigned char *)CH375_CMD_PORT_ADDR = mCmd;  通过并口直接读写CH375而非普通I/O模拟 */
	//PORTB |= 0x08;  /* 输出A0=1 */
	PORTG |= (0x01 << CH375_AO);
	
	PORTD = mCmd;  /* 向CH375的并口输出数据 */
	DDRD = 0xFF;  /* 并口D0-D7输出 */
	
	//PORTB &= 0xF9;  /* 输出有效写控制信号, 写CH375芯片的命令端口, A0=1; CS=0; WR=0; RD=1; */
	PORTG &= ~(0x01 << CH375_CS);
	PORTG &= ~(0x01 << CH375_WR);
	DDRD = 0xFF;  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度大于100nS */
	
	//PORTB |= 0x07;  /* 输出无效的控制信号, 完成操作CH375芯片, A0=1; CS=1; WR=1; RD=1; */
	PORTG |= (0x01 << CH375_CS);
	PORTG |= (0x01 << CH375_WR);
	PORTG |= (0x01 << CH375_RD); 
	
	DDRD = 0x00;  /* 禁止数据输出 */
	
	//PORTB &= 0xF7;  /* 输出A0=0; 可选操作 */
	PORTG &= ~(0x01 << CH375_AO);
	mDelay1uS( ); mDelay1uS( );  /* 至少延时2uS */
}

void xWriteCH375Data( UINT8 mData )		/* 外部定义的被CH375程序库调用的子程序,向CH375写数据 */
{
/*	*(volatile unsigned char *)CH375_DAT_PORT_ADDR = mData;  通过并口直接读写CH375而非普通I/O模拟 */
	PORTD = mData;  /* 向CH375的并口输出数据 */
	DDRD = 0xFF;  /* 并口D0-D7输出 */
	//PORTB &= 0xF1;  /* 输出有效写控制信号, 写CH375芯片的数据端口, A0=0; CS=0; WR=0; RD=1; */
	PORTG &= ~(0x01 << CH375_AO); 
	PORTG &= ~(0x01 << CH375_CS);
	PORTG &= ~(0x01 << CH375_WR);
	
	DDRD = 0xFF;  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度大于100nS */
	//PORTB |= 0x07;  /* 输出无效的控制信号, 完成操作CH375芯片, A0=0; CS=1; WR=1; RD=1; */
	PORTG |= (0x01 << CH375_CS);
	PORTG |= (0x01 << CH375_WR);
	PORTG |= (0x01 << CH375_RD); 
	
	DDRD = 0x00;  /* 禁止数据输出 */
	mDelay1uS( );  /* 至少延时1.2uS */
}

UINT8 xReadCH375Data( void )			/* 外部定义的被CH375程序库调用的子程序,从CH375读数据 */
{
	UINT8	mData;
/*	mData = *(volatile unsigned char *)CH375_DAT_PORT_ADDR;  通过并口直接读写CH375而非普通I/O模拟 */
	mDelay1uS( );  /* 至少延时1.2uS */
	DDRD = 0x00;  /* 数据输入 */
	//PORTB &= 0xF2;  /* 输出有效读控制信号, 读CH375芯片的数据端口, A0=0; CS=0; WR=1; RD=0; */
	PORTG &= ~(0x01 << CH375_AO); 
	PORTG &= ~(0x01 << CH375_CS);
	PORTG &= ~(0x01 << CH375_RD);
	DDRD = 0x00;  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度大于100nS */
	mData = PIND;  /* 从CH375的并口PA输入数据 */
	//PORTB |= 0x07;  /* 输出无效的控制信号, 完成操作CH375芯片, A0=0; CS=1; WR=1; RD=1; */
		PORTG |= (0x01 << CH375_CS);
	PORTG |= (0x01 << CH375_WR);
	PORTG |= (0x01 << CH375_RD); 
	
	return( mData );
}
