==> andrewc12/wch-resources/CH375LIB/MSP430/FILELIB8/EXAM1/CH375HFT.C <==
#include <msp430x44x.h>
#include <string.h>
#include <stdio.h>
#define LIB_CFG_FILE_IO			1		/* 文件读写的数据的复制方式,0为"外部子程序",1为"内部复制" */
#define LIB_CFG_INT_EN			0		/* CH375的INT#引脚连接方式,0为"查询方式",1为"中断方式" */
#define CH375_CMD_PORT_ADDR		0xBDF1	/* CH375命令端口的I/O地址 */
#define CH375_DAT_PORT_ADDR		0xBCF0	/* CH375数据端口的I/O地址 */
#define	DISK_BASE_BUF_ADDR		0x0200	/* 外部RAM的磁盘数据缓冲区的起始地址,从该单元开始的缓冲区长度为SECTOR_SIZE */
#define DISK_BASE_BUF_LEN		512		/* 默认的磁盘数据缓冲区大小为512字节,建议选择为2048甚至4096以支持某些大扇区的U盘,为0则禁止在.H文件中定义缓冲区并由应用程序在pDISK_BASE_BUF中指定 */
#define FILE_DATA_BUF_ADDR		0x0400	/* 外部RAM的文件数据缓冲区的起始地址,缓冲区长度不小于一次读写的数据长度 */
#define FILE_DATA_BUF_LEN		0x0200	/* 外部RAM的文件数据缓冲区,缓冲区长度不小于一次读写的数据长度 */
#define CH375_INT_WIRE			( P1IN & 0x10 )	/* P1.4, CH375的中断线INT#引脚,连接CH375的INT#引脚,用于查询中断状态 */
#define NO_DEFAULT_CH375_F_ENUM		1		/* 未调用CH375FileEnumer程序故禁止以节约代码 */
#define NO_DEFAULT_CH375_F_QUERY	1		/* 未调用CH375FileQuery程序故禁止以节约代码 */
#include "..\CH375HF8.H"

void CH375_PORT_INIT( )  /* 由于使用通用I/O模块并口读写时序,所以进行初始化 */
{
	P1OUT = ( P1OUT | 0x07 ) & 0xF7;  /* 设置A0为低电平,CS,WR,RD默认为高电平 */
	P1DIR = ( P1DIR | 0x0F ) & 0xEF;  /* 设置INT#为输入,设置CS,WR,RD,A0为输出 */
	P4DIR = 0;  /* 设置8位并口输入 */
}

void xWriteCH375Cmd( UINT8 mCmd )		/* 外部定义的被CH375程序库调用的子程序,向CH375写命令 */
{
	_NOP( ); _NOP( ); _NOP( );  /* 至少延时2uS,实际由于模拟I/O较慢而只需少量延时 */
	P1DIR |= 0x0F;  /* 设置P1口A0,CS,WR,RD为输出控制信号 */
	P4OUT = mCmd;  /* 向CH375的并口输出数据 */
	P4DIR = 0xFF;  /* 写操作所以数据输出 */
	P1OUT |= 0x0F;  /* 指向CH375芯片的命令端口, A0(P1.3)=1; */
	P1OUT &= 0xF9;  /* 输出有效写控制信号, 写CH375芯片的命令端口, A0(P1.3)=1; CS(P1.2)=0; WR=(P1.1)=0; RD(P1.0)=1; */
	_NOP( );  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度为100nS */
	P1OUT |= 0x07;  /* 输出无效的控制信号, 完成操作CH375芯片, A0(P1.3)=1; CS(P1.2)=1; WR=(P1.1)=1; RD(P1.0)=1; */
	P1OUT &= 0xF7;  /* 输出A0(P1.3)=0; 可选操作 */
	P4DIR = 0;  /* 禁止数据输出 */
	_NOP( ); _NOP( ); _NOP( ); _NOP( ); _NOP( );  /* 至少延时2uS,实际由于模拟I/O较慢而只需少量延时 */
}

void xWriteCH375Data( UINT8 mData )		/* 外部定义的被CH375程序库调用的子程序,向CH375写数据 */
{
	P4OUT = mData;  /* 向CH375的并口输出数据 */
	P4DIR = 0xFF;  /* 写操作所以数据输出 */
	P1OUT &= 0xF1;  /* 输出有效写控制信号, 写CH375芯片的数据端口, A0(P1.3)=0; CS(P1.2)=0; WR=(P1.1)=0; RD(P1.0)=1; */
	_NOP( );  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度为100nS */
	P1OUT |= 0x07;  /* 输出无效的控制信号, 完成操作CH375芯片, A0(P1.3)=0; CS(P1.2)=1; WR=(P1.1)=1; RD(P1.0)=1; */
	P4DIR = 0;  /* 禁止数据输出 */
	_NOP( );  /* 至少延时1uS,实际由于模拟I/O较慢而不一定有必要 */
}

UINT8 xReadCH375Data( void )			/* 外部定义的被CH375程序库调用的子程序,从CH375读数据 */
{
	UINT8	mData;
	_NOP( );  /* 至少延时1uS,实际由于模拟I/O较慢而不一定有必要 */
	P4DIR = 0;  /* 读操作所以数据输入 */
	P1OUT &= 0xF2;  /* 输出有效读控制信号, 读CH375芯片的数据端口, A0(P1.3)=0; CS(P1.2)=0; WR=(P1.1)=1; RD(P1.0)=0; */
	_NOP( );  /* 该操作无意义,仅作延时,CH375要求读写脉冲宽度为100nS */
	mData = P4IN;  /* 从CH375的并口输入数据 */
	P1OUT |= 0x07;  /* 输出无效的控制信号, 完成操作CH375芯片, A0(P1.3)=0; CS(P1.2)=1; WR=(P1.1)=1; RD(P1.0)=1; */
	return( mData );
}
